--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     <header>
-        <h1>Projeto Portifólio Ian</h1>
+        <h1 class="title">Projeto Portifólio Ian</h1>
         <menu>
-            <ul>
-                <li>
-                    <a href="#home">Home</a>
+            <ul class="menu">
+                <li class="btn">
+                    <a class="link" href="#home">Home</a>
                 </li>
-                <li>
-                    <a href="#sobre">Sobre</a>
+                <li class="btn">
+                    <a class="link" href="#sobre">Sobre</a>
                 </li>
-                <li>
-                    <a href="#servicos">Serviços</a>
+                <li class="btn">
+                    <a class="link" href="#servicos">Serviços</a>
                 </li>
-                <li>
-                    <a href="#contato">Contato</a>
+                <li class="btn">
+                    <a class="link" href="#contato">Contato</a>
                 </li>
             </ul>
         </menu>
